revise modal buttons to avoid cutoff

--- a/app/components/FilterRow.css
+++ b/app/components/FilterRow.css
@@ -94,7 +94,7 @@
 
 .modal {
   display: block;
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   bottom: 0;
   left: 0;
@@ -120,16 +120,26 @@
 }
 
 /* This is the Delete button on confirm delete pop up */
+.modal .modalButtons {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row-reverse;
+  margin-bottom: 1em;
+}
+
+.modal .modalButtons .button + .button {
+  margin-right: 1em;
+}
 .modal .button {
-  position: absolute;
+  /* position: absolute;
   bottom: 0.75rem;
-  right: 7.25rem;
+  right: 7.25rem; */
   border-radius: 15px;
 }
 
 .modal .button:hover {
   background: #F09E6A;
-  border: none;
+  border-color: transparent;
   color: white;
 }
 
@@ -141,6 +151,6 @@
 
 .modal .button.cancel:hover {
   background: #F09E6A;
-  border: none;
+  border-color: transparent;
   color: white;
 }
